examples/gateway-api-public/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: public
spec:
  controllerName: "gateway.netbird.io/controller"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: netbird
spec:
  gatewayClassName: public
  listeners:
  - protocol: gateway.netbird.io/NBRoutingPeer
    name: netbird
    port: 80
